entry content text fix
fixed text from going too far to the right edge of index context box.

--- a/wp-content/themes/my-simone/layouts/content-sidebar.css
+++ b/wp-content/themes/my-simone/layouts/content-sidebar.css
@@ -60,6 +60,7 @@ Layout: Content-Sidebar
 .entry-content p {
 	text-align: left;
 	margin-left: 1em;
+	margin-right: 1.25em;
 }
 .index-box {
 	max-width: 780px;
